# cognexus

./: .gitignore  AGENTS.md  CURRENT_STATE.md  Cargo.toml  LESSONS.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_TASK_BRIEF.md  README.md  SESSION_PLAN.md  TODO_VISUAL_SYSTEM.md  justfile
apps/desktop/cognexus/: Cargo.toml  tauri.conf.json
apps/desktop/cognexus/src/: error.rs  logger.rs  main.rs
apps/desktop/cognexus/src/plugin_manager/: loader.rs  mod.rs  scanner.rs  state.rs
backend/common/: Cargo.toml
backend/common/src/error/: error_location.rs  mod.rs
backend/model/: Cargo.toml
backend/model/src/: drawable.rs  error.rs  lib.rs
backend/model/src/camera/: camera_2d.rs  mod.rs
backend/model/src/geometry/: quad.rs
backend/model/src/graph/: data_type.rs  data_type_registry.rs  edge.rs  edge_builder.rs  graph.rs  graph_builder.rs  mod.rs  node.rs  node_builder.rs  node_definition.rs  node_definition_registry.rs  port.rs  port_builder.rs
backend/nodes/: Cargo.toml
backend/nodes/src/: bindings.rs  end.rs  error.rs  lib.rs  start.rs
backend/plugin-manager/: Cargo.toml
backend/plugin-manager/src/: error.rs  lib.rs  loader.rs  registry.rs  scanner.rs  state.rs  translator.rs
backend/proto/: Cargo.toml  build.rs
backend/proto/src/: lib.rs
backend/renderer/: Cargo.toml
backend/renderer/src/: commands.rs  error.rs  lib.rs  renderer.rs
backend/renderer/src/shaders/quad/: mod.rs  quad.wgsl
backend/types/: Cargo.toml
backend/types/src/: bindings.rs  error.rs  lib.rs  signal.rs
cli/inspect/: Cargo.toml
cli/inspect/src/: arguments.rs  error.rs  main.rs  plugin_state.rs
docs/adr/: 0001-camera-and-grid-system.md  0002-camera-control-input-system.md  0003-gpu-accelerated-visual-effects-and-rendering.md  0004-node-visual-style-system-with-yaml-dsl.md  0005-plugin-discovery-and-registry-architecture.md  0006-execution-architecture-and-scaling.md  README.md  template.md
frontend/cognexus/: CognexusBlazor.csproj  Program.cs  _Imports.razor
frontend/cognexus/Layout/: MainLayout.razor  NavMenu.razor
frontend/cognexus/Pages/: Home.razor
frontend/cognexus/Properties/: launchSettings.json
frontend/cognexus/Services/: ICameraService.cs  RendererService.cs
frontend/cognexus/wwwroot/: index.html
frontend/cognexus/wwwroot/css/: app.css
frontend/cognexus/wwwroot/js/: renderer-helper.js
proto/: commands.proto  events.proto  registry.proto
wit/: plugin.wit
