[workspace]
members = [
    "backend/model",
    "backend/renderer",
    "apps/desktop/cognexus",
    "backend/proto",
    "backend/common",
]

resolver = "3"

[workspace.dependencies]
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-build = { version = "2.5.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
prost = { version = "0.14.1" }
prost-build = { version = "0.14.1" }
thiserror = { version = "2.0.17" }
wgpu = { version = "27.0.1" }
pollster = { version = "0.4.0" }
raw-window-handle = { version = "0.6.2" }
tokio = { version = "1.48.0", features = ["full"] }

proto = { path = "backend/proto" }
cognexus-renderer = { path = "backend/renderer" }
cognexus-model = { path = "backend/model" }
common = {path = "backend/common"}
