[workspace]
members = [
    "backend/model",
    "backend/renderer",
    "apps/desktop/cognexus",
    "backend/proto",
    "backend/common",
    "backend/types",
    "backend/nodes",
    "backend/plugin-manager",
    "cli/inspect"
]

resolver = "3"

[workspace.dependencies]
tauri = { version = "2.9.5", features = ["devtools", "macos-private-api"] }
tauri-build = { version = "2.5.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
prost = { version = "0.14.1" }
prost-build = { version = "0.14.1" }
thiserror = { version = "2.0.17" }
wgpu = { version = "27.0.1", features = ["webgl"] }
pollster = { version = "0.4.0" }
raw-window-handle = { version = "0.6.2" }
tokio = { version = "1.48.0", features = ["full"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck"] }
wasm-bindgen = { version = "0.2.106" }
web-sys = { version = "0.3.83", features = ["HtmlCanvasElement", "Window", "Document", "console"] }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = { version = "0.1.7" }
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
semver = { version = "1.0.27" }
wasmtime = { version = "40.0.0" }
wasmtime-wasi = { version = "40.0.0" }
clap = { version = "4.5.53", features = ["derive"] }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
log = { version = "0.4.29" }
fern = { version = "0.7.1" }

proto = { path = "backend/proto" }
cognexus-renderer = { path = "backend/renderer" }
cognexus-model = { path = "backend/model" }
cognexus-types = { path = "backend/types" }
common = {path = "backend/common"}
