[package]
name = "cognexus-plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
log = { workspace = true }

cognexus-model = { workspace = true }
proto = { workspace = true }
common = { workspace = true }
