[package]
name = "cognexus-types"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = { workspace = true }
cognexus-model = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
wit-bindgen-rt = { workspace = true }

common = { workspace = true }

[package.metadata.component]
package = "cognexus:plugin"
target = { path = "../../wit", world = "types-plugin" }
