[package]
name = "cognexus-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }

proto = { workspace = true }
cognexus-renderer = { workspace = true }
cognexus-model = { workspace = true }
