[package]
name = "cognexus-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }

common = { workspace = true, features = ["serde"] }
proto = { workspace = true }
cognexus-renderer = { workspace = true }
cognexus-model = { workspace = true }
cognexus-plugin-manager = { workspace = true }
